add exemplos de array json

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -1224,155 +1224,86 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Json\r\n",
+    "# <font color=#FF0000>**json**</font>\r\n",
     "Geralmente, anexar dados a um arquivo JSON não é uma ideia muito boa porque, para cada pequena atualização, você deve ler e analisar todo o objeto de arquivo. Se o seu arquivo JSON tiver n entradas, a complexidade do tempo de execução de apenas atualizá-lo é O (n) .\r\n",
     "\r\n",
-    "Uma abordagem melhor seria armazenar os dados como um arquivo CSV que pode ser lido linha por linha que simplifica a análise e atualização significativamente, apenas acrescentando uma única linha ao arquivo que tem complexidade de tempo de execução constante."
+    "**_Uma abordagem melhor seria armazenar os dados como um arquivo CSV que pode ser lido linha por linha que simplifica a análise e atualização significativamente, apenas acrescentando uma única linha ao arquivo que tem complexidade de tempo de execução constante._**"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## dict{ } to objeto json{ }"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "from json import dumps\r\n",
+    "# Sintaxe de <font color=#FF0000>**json.dump()**</font> e <font color=#FF0000>**json.dumps()**</font>\r\n",
     "\r\n",
-    "carros_dict = {'marca': 'Toyota', 'modelo': 'Corolla', 'cor': 'chumbo'}\r\n",
-    "print(carros_py)\r\n",
-    "print(type(carros_py))\r\n",
+    ">json.dump(obj, fp, *, skipkeys=False, ensure_ascii=True, check_circular=True, allow_nan=True, cls=None, indent=None, separators=None, default=None, sort_keys=False, **kw)\r\n",
     "\r\n",
-    "# transformando em objeto json\r\n",
-    "carros_json = dumps(carros_dict)\r\n",
-    "print(f'\\n{carros_json}')\r\n",
-    "print(type(carros_json))\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "{'marca': 'Toyota', 'modelo': 'Corolla', 'cor': 'chumbo'}\n",
-      "<class 'dict'>\n",
-      "\n",
-      "{\"marca\": \"Toyota\", \"modelo\": \"Corolla\", \"cor\": \"chumbo\"}\n",
-      "<class 'str'>\n"
-     ]
-    }
+    "**É usado para gravar um objeto Python em um arquivo como dados formatados em JSON.**\r\n",
+    "\r\n",
+    ">json.dumps(obj, *, skipkeys=False, ensure_ascii=True, check_circular=True, allow_nan=True, cls=None, indent=None, separators=None, default=None, sort_keys=False, **kw)\r\n",
+    "\r\n",
+    "**É usado para escrever um objeto Python em uma String JSON.**\r\n",
+    "\r\n",
+    "* **obj** nada mais é que um objeto serializável Python que você deseja converter em um formato JSON.\r\n",
+    "* A **fp** é um ponteiro de arquivo usado para gravar dados formatados em JSON em um arquivo. O módulo json Python sempre produz objetos de string, não objetos de bytes, portanto, fp.write()deve suportar a entrada de string.\r\n",
+    "* Se **skipkeysfor** verdadeiro (padrão: False), então as chaves de dict que não são de um tipo básico, (str, int, float, bool, None) serão ignoradas em vez de aumentar a TypeError. Por exemplo, se uma de suas chaves de dicionário for um objeto Python personalizado, essa chave será omitida durante a conversão do dicionário em JSON.\r\n",
+    "* Se **ensure_ascii** for verdadeiro (o padrão), a saída terá a garantia de ter todos os caracteres não ASCII de entrada com escape. Se ensure_asciifor falso, esses caracteres serão reproduzidos no estado em que se encontram.\r\n",
+    "* **allow_nan** é True por padrão, então seus equivalentes JavaScript (NaN, Infinity, -Infinity) serão usados. Se for False, será um ValueError para serializar valores flutuantes fora do intervalo (nan, inf, -inf).\r\n",
+    "* Um **indent** argumento é usado para imprimir JSON para torná-lo mais legível. O padrão é (', ', ': '). Para obter a representação JSON mais compacta, você deve usar (',', ':')  para eliminar os espaços em branco.\r\n",
+    "*Se **sort_keys** for verdadeiro (padrão: Falso), a saída dos dicionários será classificada por chave"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## list[ ] to array json[ ]"
+    "# <font color=#FF0000>**json.load()**</font> - Trabalhando com json.load()\r\n",
+    "\r\n",
+    "Abrindo arquivo json de varios niveis e transformando o mesmo em objeto dict em python. Por fim manipulando o dict."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "source": [
-    "from json import dumps\r\n",
+    "import json\r\n",
     "\r\n",
-    "carros_list = ['Toyota', 'VW', 'Honda', 'BMW']\r\n",
-    "print(carros_list)\r\n",
-    "print(type(carros_list))\r\n",
+    "with open('config_app.json', mode='r', encoding='utf-8') as a:\r\n",
+    "    json_obj = json.load(a)\r\n",
     "\r\n",
-    "# transformando em objeto json\r\n",
-    "carros_json = dumps(carros_list)\r\n",
-    "print(f'\\n{carros_json}')\r\n",
-    "print(type(carros_json))\r\n"
+    "print(f'Type = {type(json_obj)}')\r\n",
+    "\r\n",
+    "for key, data in json_obj.items():\r\n",
+    "    print(f'\\n{key} - {data}')\r\n",
+    "    \r\n",
+    "print('-'*100)\r\n",
+    "    \r\n",
+    "print(f'\\n Imprimindo nivel 2:\\n{json_obj[\"permissões\"][\"5\"]}')\r\n",
+    "\r\n",
+    "print(f'\\n Imprimindo nivel 3:\\n{json_obj[\"permissões\"][\"5\"][\"nome\"]}')\r\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "['Toyota', 'VW', 'Honda', 'BMW']\n",
-      "<class 'list'>\n",
+      "Type = <class 'dict'>\n",
       "\n",
-      "[\"Toyota\", \"VW\", \"Honda\", \"BMW\"]\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## tuple( ) to array json [ ]"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "source": [
-    "from json import dumps\r\n",
-    "\r\n",
-    "carros_tuple = ('Toyota', 'VW', 'Honda', 'BMW')\r\n",
-    "print(carros_tuple)\r\n",
-    "print(type(carros_tuple))\r\n",
-    "\r\n",
-    "# transformando em objeto json\r\n",
-    "carros_json = dumps(carros_tuple)\r\n",
-    "print(f'\\n{carros_json}')\r\n",
-    "print(type(carros_json))\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "('Toyota', 'VW', 'Honda', 'BMW')\n",
-      "<class 'tuple'>\n",
+      "permissões - {'1': {'nome': 'Desenvolvedor', 'descrição': 'Tem acesso full ao sistema'}, '2': {'nome': 'Administrador Master', 'descrição': 'Tem acesso full as funcionalidades do sistema e não pode ser apagado'}, '3': {'nome': 'Administrador', 'descrição': 'Tem acesso full as funcionalidades do sistema e pode ser apagado'}, '4': {'nome': 'Escrita', 'descrição': 'Tem acesso para inserção de dados no sistema e pode se bloquear telas do mesmo'}, '5': {'nome': 'Leitura', 'descrição': 'Tem acesso para leitura de dados no sistema e pode se bloquear telas do mesmo'}}\n",
       "\n",
-      "[\"Toyota\", \"VW\", \"Honda\", \"BMW\"]\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## dumps + indent, separators + sort_keys"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "source": [
-    "from json import dumps\r\n",
-    "\r\n",
-    "carros_dict = {'marca': 'Toyota', 'modelo': 'Corolla', 'cor': 'chumbo'}\r\n",
-    "\r\n",
-    "# indentando a saida com 4 espaços, trocando os separadores : para =\r\n",
-    "# ordenando com \r\n",
-    "carros_json = dumps(carros_dict, indent=4, separators=(': ', '='), sort_keys=True)\r\n",
-    "print(f'\\n{carros_json}')\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
+      "bloqueio_tela - {'2': {'tela_bloqueadas': []}, '3': {'tela_bloqueadas': []}, '4': {'tela_bloqueadas': []}, '5': {'tela_bloqueadas': []}}\n",
       "\n",
-      "{\n",
-      "    \"cor\"=\"chumbo\": \n",
-      "    \"marca\"=\"Toyota\": \n",
-      "    \"modelo\"=\"Corolla\"\n",
-      "}\n"
+      "telas - {}\n",
+      "\n",
+      "menu_config - {'0': [{'icon_left': 'account', 'texto': '_users', 'icon_right': 'chevron-right', 'status_icon_right': 'True', 'func_icon_right': 'config_user', 'cor': 'False'}, {'icon_left': 'tools', 'texto': '_project', 'icon_right': 'chevron-right', 'status_icon_right': 'True', 'func_icon_right': 'config_project', 'cor': 'False'}]}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      " Imprimindo nivel 2:\n",
+      "{'nome': 'Leitura', 'descrição': 'Tem acesso para leitura de dados no sistema e pode se bloquear telas do mesmo'}\n",
+      "\n",
+      " Imprimindo nivel 3:\n",
+      "Leitura\n"
      ]
     }
    ],
@@ -1456,75 +1387,6 @@
     "    }\r\n",
     "}\r\n",
     "```"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "source": [
-    "import json\r\n",
-    "\r\n",
-    "with open('config_app.json', mode='r', encoding='utf-8') as a:\r\n",
-    "    json_obj = json.load(a)\r\n",
-    "\r\n",
-    "print(f'Type = {type(json_obj)}')\r\n",
-    "\r\n",
-    "for key, data in json_obj.items():\r\n",
-    "    print(f'\\n{key} - {data}')\r\n",
-    "    \r\n",
-    "print('-'*100)\r\n",
-    "    \r\n",
-    "print(f'\\n Imprimindo nivel 2:\\n{json_obj[\"permissões\"][\"5\"]}')\r\n",
-    "\r\n",
-    "print(f'\\n Imprimindo nivel 3:\\n{json_obj[\"permissões\"][\"5\"][\"nome\"]}')\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Type = <class 'dict'>\n",
-      "\n",
-      "permissões - {'1': {'nome': 'Desenvolvedor', 'descrição': 'Tem acesso full ao sistema'}, '2': {'nome': 'Administrador Master', 'descrição': 'Tem acesso full as funcionalidades do sistema e não pode ser apagado'}, '3': {'nome': 'Administrador', 'descrição': 'Tem acesso full as funcionalidades do sistema e pode ser apagado'}, '4': {'nome': 'Escrita', 'descrição': 'Tem acesso para inserção de dados no sistema e pode se bloquear telas do mesmo'}, '5': {'nome': 'Leitura', 'descrição': 'Tem acesso para leitura de dados no sistema e pode se bloquear telas do mesmo'}}\n",
-      "\n",
-      "bloqueio_tela - {'2': {'tela_bloqueadas': []}, '3': {'tela_bloqueadas': []}, '4': {'tela_bloqueadas': []}, '5': {'tela_bloqueadas': []}}\n",
-      "\n",
-      "telas - {}\n",
-      "\n",
-      "menu_config - {'0': [{'icon_left': 'account', 'texto': '_users', 'icon_right': 'chevron-right', 'status_icon_right': 'True', 'func_icon_right': 'config_user', 'cor': 'False'}, {'icon_left': 'tools', 'texto': '_project', 'icon_right': 'chevron-right', 'status_icon_right': 'True', 'func_icon_right': 'config_project', 'cor': 'False'}]}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "\n",
-      " Imprimindo nivel 2:\n",
-      "{'nome': 'Leitura', 'descrição': 'Tem acesso para leitura de dados no sistema e pode se bloquear telas do mesmo'}\n",
-      "\n",
-      " Imprimindo nivel 3:\n",
-      "Leitura\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Sintaxe de <font color=#FF0000>**json.dump()**</font> e <font color=#FF0000>**json.dumps()**</font>\r\n",
-    "\r\n",
-    ">json.dump(obj, fp, *, skipkeys=False, ensure_ascii=True, check_circular=True, allow_nan=True, cls=None, indent=None, separators=None, default=None, sort_keys=False, **kw)\r\n",
-    "\r\n",
-    "**É usado para gravar um objeto Python em um arquivo como dados formatados em JSON.**\r\n",
-    "\r\n",
-    ">json.dumps(obj, *, skipkeys=False, ensure_ascii=True, check_circular=True, allow_nan=True, cls=None, indent=None, separators=None, default=None, sort_keys=False, **kw)\r\n",
-    "\r\n",
-    "**É usado para escrever um objeto Python em uma String JSON.**\r\n",
-    "\r\n",
-    "* **obj** nada mais é que um objeto serializável Python que você deseja converter em um formato JSON.\r\n",
-    "* A **fp** é um ponteiro de arquivo usado para gravar dados formatados em JSON em um arquivo. O módulo json Python sempre produz objetos de string, não objetos de bytes, portanto, fp.write()deve suportar a entrada de string.\r\n",
-    "* Se **skipkeysfor** verdadeiro (padrão: False), então as chaves de dict que não são de um tipo básico, (str, int, float, bool, None) serão ignoradas em vez de aumentar a TypeError. Por exemplo, se uma de suas chaves de dicionário for um objeto Python personalizado, essa chave será omitida durante a conversão do dicionário em JSON.\r\n",
-    "* Se **ensure_ascii** for verdadeiro (o padrão), a saída terá a garantia de ter todos os caracteres não ASCII de entrada com escape. Se ensure_asciifor falso, esses caracteres serão reproduzidos no estado em que se encontram.\r\n",
-    "* **allow_nan** é True por padrão, então seus equivalentes JavaScript (NaN, Infinity, -Infinity) serão usados. Se for False, será um ValueError para serializar valores flutuantes fora do intervalo (nan, inf, -inf).\r\n",
-    "* Um **indent** argumento é usado para imprimir JSON para torná-lo mais legível. O padrão é (', ', ': '). Para obter a representação JSON mais compacta, você deve usar (',', ':')  para eliminar os espaços em branco.\r\n",
-    "*Se **sort_keys** for verdadeiro (padrão: Falso), a saída dos dicionários será classificada por chave"
    ],
    "metadata": {}
   },
@@ -1646,6 +1508,102 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "from json import dumps\r\n",
+    "\r\n",
+    "#! dict para obj json\r\n",
+    "\r\n",
+    "carros_dict = {'marca': 'Toyota', 'modelo': 'Corolla', 'cor': 'chumbo'}\r\n",
+    "print(carros_dict)\r\n",
+    "print(type(carros_dict))\r\n",
+    "\r\n",
+    "# transformando em objeto json\r\n",
+    "carros_json = dumps(carros_dict)\r\n",
+    "print(f'\\n{carros_json}')\r\n",
+    "print(type(carros_json))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'marca': 'Toyota', 'modelo': 'Corolla', 'cor': 'chumbo'}\n",
+      "<class 'dict'>\n",
+      "\n",
+      "{\"marca\": \"Toyota\", \"modelo\": \"Corolla\", \"cor\": \"chumbo\"}\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "from json import dumps\r\n",
+    "\r\n",
+    "#! tuple() to array json []\r\n",
+    "\r\n",
+    "carros_tuple = ('Toyota', 'VW', 'Honda', 'BMW')\r\n",
+    "print(carros_tuple)\r\n",
+    "print(type(carros_tuple))\r\n",
+    "\r\n",
+    "# transformando em objeto json\r\n",
+    "carros_json = dumps(carros_tuple)\r\n",
+    "print(f'\\n{carros_json}')\r\n",
+    "print(type(carros_json))\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "('Toyota', 'VW', 'Honda', 'BMW')\n",
+      "<class 'tuple'>\n",
+      "\n",
+      "[\"Toyota\", \"VW\", \"Honda\", \"BMW\"]\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "from json import dumps\r\n",
+    "\r\n",
+    "#! list[] to array json[]\r\n",
+    "\r\n",
+    "carros_list = ['Toyota', 'VW', 'Honda', 'BMW']\r\n",
+    "print(carros_list)\r\n",
+    "print(type(carros_list))\r\n",
+    "\r\n",
+    "# transformando em objeto json\r\n",
+    "carros_json = dumps(carros_list)\r\n",
+    "print(f'\\n{carros_json}')\r\n",
+    "print(type(carros_json))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['Toyota', 'VW', 'Honda', 'BMW']\n",
+      "<class 'list'>\n",
+      "\n",
+      "[\"Toyota\", \"VW\", \"Honda\", \"BMW\"]\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "# <font color=#FF0000>**json.dump()**</font> - Para codificar e gravar dados JSON em um arquivo\r\n",
@@ -1697,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "source": [
     "import json\r\n",
     "\r\n",
@@ -1713,9 +1671,20 @@
     "    \r\n",
     "# criando um arquivo json sem formatação e sem espaço para economizar tamanho com \",\" e \":\":\r\n",
     "with open('file_json_compacto.json', mode='w', encoding='utf-8') as write_file:\r\n",
-    "    json.dump(dicionario, write_file, separators=(',', ':'), sort_keys=True)"
+    "    json.dump(dicionario, write_file, separators=(',', ':'), sort_keys=True)\r\n",
+    "    \r\n",
+    "# podemos tambem trocar o sinal que divide key e chave com separators\r\n",
+    "print(json.dumps(dicionario, separators=(',', '='), sort_keys=True))\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{\"bloqueio_tela\"={\"1\"={\"tela_bloqueadas\"=[]},\"2\"={\"tela_bloqueadas\"=[]},\"3\"={\"tela_bloqueadas\"=[]},\"5\"={\"tela_bloqueadas\"=[]}}}\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
