adicionando observações para ensure_ascii=False em json

--- a/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
+++ b/Arquivos_Modulos_Pacotes/trabalhando_com_arquivos.ipynb
@@ -1738,7 +1738,15 @@
    "source": [
     "# <font color=#FF0000>**json.dumps()**</font> - Lidar com caracteres não ASCII de dados JSON ao gravá-los em um arquivo\r\n",
     "\r\n",
-    "O json.dump() método possui  ensure_ascii parâmetro. O  ensure_ascii é verdadeiro por padrão. A saída tem a garantia de ter todos os caracteres não ASCII de entrada com escape. Se  ensure_ascii for falso, esses caracteres serão reproduzidos no estado em que se encontram. Se você deseja armazenar caracteres não ASCII, no estado em que se encontra, use o código a seguir."
+    "O json.dump() método possui  ensure_ascii parâmetro. O  ensure_ascii é verdadeiro por padrão. A saída tem a garantia de ter todos os caracteres não ASCII de entrada com escape. Se  ensure_ascii for falso, esses caracteres serão reproduzidos no estado em que se encontram. Se você deseja armazenar caracteres não ASCII, no estado em que se encontra, use o código a seguir.\r\n",
+    "\r\n",
+    "Obs.: Se usar o **ensure_ascii=False** como parametro do json.dump o mesmo irá salvar palavras com acentuação no arquivo json. Uma boa pratica ao abrir estes arquivos é usar o encoding  utf-8\r\n",
+    "\r\n",
+    "~~~\r\n",
+    "\r\n",
+    "# boa pratica se salvar um json com ensure_ascii=False é abrir o mesmo com encoding utf-8\r\n",
+    "with open(caminho, mode='r', encoding='utf-8') as read_file:\r\n",
+    "~~~"
    ],
    "metadata": {}
   },
