add os.path import split - Separa path e arquivo

--- a/Arquivos_Modulos_Pacotes/arquivos_diretorios.ipynb
+++ b/Arquivos_Modulos_Pacotes/arquivos_diretorios.ipynb
@@ -37,6 +37,41 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# os.path import split - Separa path e arquivo"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "source": [
+    "from os.path import join, exists, split\r\n",
+    "\r\n",
+    "path = join('C:\\\\','Users','Avell')\r\n",
+    "file = 'config.json'\r\n",
+    "caminho = join(path,file)\r\n",
+    "print(f'{caminho = }')\r\n",
+    "\r\n",
+    "# separando path e file com split\r\n",
+    "path, file = split(caminho)\r\n",
+    "print(f'{path = }\\n{file = }')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "caminho = 'C:\\\\Users\\\\Avell\\\\config.json'\n",
+      "path = 'C:\\\\Users\\\\Avell'\n",
+      "file = 'config.json'\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# os.listdir() - Lista diretorios e arquivos de uma pasta e coloca eles em uma list"
    ],
    "metadata": {}
@@ -581,19 +616,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 122,
    "source": [
     "from os import walk\r\n",
     "\r\n",
     "# gera um gerador, que devemos inteirar com um for\r\n",
-    "print(f'{walk(\".\")}')\r\n",
+    "print(f'{walk(\"H:/Meu Drive\")}')\r\n",
     "\r\n",
     "# tupla (caminho de diretório, nomes de diretório, nomes de arquivo).\r\n",
-    "for data in walk('.'):\r\n",
+    "for data in walk('H:/Meu Drive'):\r\n",
     "    print(f'\\n{data = }')\r\n",
     "    \r\n",
     "# melhorando a impressão\r\n",
-    "for x, data in enumerate(walk('.')):\r\n",
+    "for x, data in enumerate(walk('H:/Meu Drive')):\r\n",
     "    print(f'\\nNivel {x}')\r\n",
     "    print(f'Raiz = {data[0]}')\r\n",
     "    print(f'Pastas = {data[1]}')\r\n",
@@ -604,30 +639,46 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<generator object _walk at 0x000001B89773AC10>\n",
+      "<generator object _walk at 0x000001B897742200>\n",
       "\n",
-      "data = ('.', ['Diretorio1'], ['arquivo1.txt', 'arquivos_diretorios.ipynb', 'config_app.json', 'contatos.csv', 'contatos.json', 'file_json_compacto.json', 'file_json_formatado.json', 'file_json_sem_formatar.json', 'file_json_sem_tipos_nao_basicos.json', 'osWalk-1.jpg', 'python-logo.png', 'python-logo2.png', 'salarios.csv', 'Tabela_Modos_de_arquivo_em_Python.png', 'teste.txt', 'trabalhando_com_arquivos.ipynb'])\n",
+      "data = ('H:/Meu Drive', ['Config', 'DESPESAS', 'PROJETOS', 'BACKUP'], ['desktop.ini'])\n",
       "\n",
-      "data = ('.\\\\Diretorio1', ['Mover_arquivos'], ['file_criado_com_open.txt', 'file_criado_com_open_copy.txt', 'file_criado_com_pathlib.txt', 'file_criado_com_with.txt'])\n",
+      "data = ('H:/Meu Drive\\\\Config', [], ['vreeland_logo.png', 'vreeland_logo.jpg'])\n",
       "\n",
-      "data = ('.\\\\Diretorio1\\\\Mover_arquivos', [], ['arquivo_trocar_diretorio.txt'])\n",
+      "data = ('H:/Meu Drive\\\\DESPESAS', [], [])\n",
+      "\n",
+      "data = ('H:/Meu Drive\\\\PROJETOS', [], [])\n",
+      "\n",
+      "data = ('H:/Meu Drive\\\\BACKUP', [], [])\n",
       "\n",
       "Nivel 0\n",
-      "Raiz = .\n",
-      "Pastas = ['Diretorio1']\n",
-      "Arquivos = ['arquivo1.txt', 'arquivos_diretorios.ipynb', 'config_app.json', 'contatos.csv', 'contatos.json', 'file_json_compacto.json', 'file_json_formatado.json', 'file_json_sem_formatar.json', 'file_json_sem_tipos_nao_basicos.json', 'osWalk-1.jpg', 'python-logo.png', 'python-logo2.png', 'salarios.csv', 'Tabela_Modos_de_arquivo_em_Python.png', 'teste.txt', 'trabalhando_com_arquivos.ipynb']\n",
+      "Raiz = H:/Meu Drive\n",
+      "Pastas = ['Config', 'DESPESAS', 'PROJETOS', 'BACKUP']\n",
+      "Arquivos = ['desktop.ini']\n",
       "\n",
       "\n",
       "Nivel 1\n",
-      "Raiz = .\\Diretorio1\n",
-      "Pastas = ['Mover_arquivos']\n",
-      "Arquivos = ['file_criado_com_open.txt', 'file_criado_com_open_copy.txt', 'file_criado_com_pathlib.txt', 'file_criado_com_with.txt']\n",
+      "Raiz = H:/Meu Drive\\Config\n",
+      "Pastas = []\n",
+      "Arquivos = ['vreeland_logo.png', 'vreeland_logo.jpg']\n",
       "\n",
       "\n",
       "Nivel 2\n",
-      "Raiz = .\\Diretorio1\\Mover_arquivos\n",
+      "Raiz = H:/Meu Drive\\DESPESAS\n",
       "Pastas = []\n",
-      "Arquivos = ['arquivo_trocar_diretorio.txt']\n",
+      "Arquivos = []\n",
+      "\n",
+      "\n",
+      "Nivel 3\n",
+      "Raiz = H:/Meu Drive\\PROJETOS\n",
+      "Pastas = []\n",
+      "Arquivos = []\n",
+      "\n",
+      "\n",
+      "Nivel 4\n",
+      "Raiz = H:/Meu Drive\\BACKUP\n",
+      "Pastas = []\n",
+      "Arquivos = []\n",
       "\n"
      ]
     }
