--- a/Arquivos_Modulos_Pacotes/arquivos_diretorios.ipynb
+++ b/Arquivos_Modulos_Pacotes/arquivos_diretorios.ipynb
@@ -600,6 +600,46 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# os.path.abspath - Verificando path completo de arquivo"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "from os import listdir\r\n",
+    "from os.path import join, abspath\r\n",
+    "\r\n",
+    "path = join('C:\\\\','Users','Avell','OneDrive','DEV','Python_Tutorial','Python_3','Arquivos_Modulos_Pacotes', 'Diretorio1')\r\n",
+    "\r\n",
+    "arquivos = listdir(path)\r\n",
+    "print(f'{arquivos = }\\n')\r\n",
+    "\r\n",
+    "# verificando path completo de cada arquivo/pasta\r\n",
+    "for item in arquivos:\r\n",
+    "    print(abspath(item))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "arquivos = ['file_criado_com_open_copy.txt', 'file_criado_com_open_renomeado.txt', 'file_criado_com_pathlib.txt', 'file_criado_com_with.txt', 'Mover_arquivos']\n",
+      "\n",
+      "c:\\Users\\Avell\\OneDrive\\DEV\\Python_Tutorial\\Python_3\\Arquivos_Modulos_Pacotes\\file_criado_com_open_copy.txt\n",
+      "c:\\Users\\Avell\\OneDrive\\DEV\\Python_Tutorial\\Python_3\\Arquivos_Modulos_Pacotes\\file_criado_com_open_renomeado.txt\n",
+      "c:\\Users\\Avell\\OneDrive\\DEV\\Python_Tutorial\\Python_3\\Arquivos_Modulos_Pacotes\\file_criado_com_pathlib.txt\n",
+      "c:\\Users\\Avell\\OneDrive\\DEV\\Python_Tutorial\\Python_3\\Arquivos_Modulos_Pacotes\\file_criado_com_with.txt\n",
+      "c:\\Users\\Avell\\OneDrive\\DEV\\Python_Tutorial\\Python_3\\Arquivos_Modulos_Pacotes\\Mover_arquivos\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# os.walk - Cria um gerador que navega entre as pastas\r\n",
     "\r\n",
     "Como atravessar o sistema de arquivos em Python? Suponha que tenhamos dado abaixo a estrutura de arquivos em nosso sistema e queremos percorrer todos os seus ramos completamente de cima para baixo.\r\n",
