Add os.sep e colocando cor nos titulos

--- a/Arquivos_Modulos_Pacotes/arquivos_diretorios.ipynb
+++ b/Arquivos_Modulos_Pacotes/arquivos_diretorios.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# OS\r\n",
+    "# <font color=#FF0000>**OS**</font>\r\n",
     "O módulo OS em Python fornece funções para interagir com o sistema operacional. O sistema operacional está incluído nos módulos de utilitário padrão do Python. Este módulo fornece uma maneira portátil de usar a funcionalidade dependente do sistema operacional. O módulo os.path é um submódulo do módulo OS em Python usado para manipulação de nomes de caminho comuns."
    ],
    "metadata": {}
@@ -11,7 +11,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.getcwd() - Mostra em qual diretorio estamos"
+    "# <font color=#FF0000>**os.getcwd()**</font> - Mostra em qual diretorio estamos"
    ],
    "metadata": {}
   },
@@ -37,7 +37,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.path import split - Separa path e arquivo"
+    "# <font color=#FF0000>**os.path.split()**</font> - Separa path e arquivo"
    ],
    "metadata": {}
   },
@@ -72,7 +72,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.listdir() - Lista diretorios e arquivos de uma pasta e coloca eles em uma list"
+    "# <font color=#FF0000>**os.listdir()**</font> - Lista diretorios e arquivos de uma pasta e coloca eles em uma list"
    ],
    "metadata": {}
   },
@@ -109,7 +109,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.path.join() - Juntando strings em caminhos\r\n",
+    "# <font color=#FF0000>**os.path.join()**</font> - Juntando strings em caminhos\r\n",
     "\r\n",
     "O método os.path.join () em Python une um ou mais componentes de caminho de forma inteligente. Este método concatena vários componentes de caminho com exatamente um separador de diretório ('/') após cada parte não vazia, exceto o último componente de caminho. Se o último componente do caminho a ser unido estiver vazio, um separador de diretório ('/') será colocado no final. \r\n",
     "Se um componente de caminho representa um caminho absoluto, todos os componentes anteriores unidos são descartados e a união continua a partir do componente de caminho absoluto."
@@ -145,7 +145,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.mkdir() - Criando diretorios\r\n",
+    "# <font color=#FF0000>**os.mkdir()**</font> - Criando diretorios\r\n",
     "\r\n",
     "O módulo OS em Python fornece funções para interagir com o sistema operacional. O sistema operacional está incluído nos módulos de utilitário padrão do Python. Este módulo fornece uma maneira portátil de usar a funcionalidade dependente do sistema operacional.\r\n",
     "\r\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.path.isdir() e os.path.exists() - Verificando se existe o diretorio\r\n",
+    "# <font color=#FF0000>**os.path.isdir()**</font> e <font color=#FF0000>**os.path.exists()**</font> - Verificando se existe o diretorio\r\n",
     "\r\n",
     "Estes métodos iram nos retornar um booleano, True ou False, que vai dizer se o diretório existe ou não.\r\n",
     "\r\n",
@@ -228,7 +228,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.rmdir() - Usado para remover o diretório."
+    "# <font color=#FF0000>**os.rmdir()**</font> - Usado para remover o diretório."
    ],
    "metadata": {}
   },
@@ -287,7 +287,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.path.isfile() e os.path.exists() - Verificando se existe o arquivo\r\n",
+    "# <font color=#FF0000>**os.path.isfile()**</font> e <font color=#FF0000>**os.path.exists()**</font> - Verificando se existe o arquivo\r\n",
     "\r\n",
     "Estes métodos iram nos retornar um booleano, True ou False, que vai dizer se o arquivo existe ou não.\r\n",
     "\r\n",
@@ -328,7 +328,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.rename - Usado para renomear um arquivo ou diretório."
+    "# <font color=#FF0000>**os.rename()**</font> - Usado para renomear um arquivo ou diretório."
    ],
    "metadata": {}
   },
@@ -356,7 +356,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# open - with - pathlib - Criando um arquivo vazio"
+    "# open - with - <font color=#FF0000>**pathlib.Path()**</font> - Criando um arquivo vazio"
    ],
    "metadata": {}
   },
@@ -392,7 +392,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# shutil.copy - Copiando um arquivo"
+    "# <font color=#FF0000>**shutil.copy()**</font> - Copiando um arquivo"
    ],
    "metadata": {}
   },
@@ -459,7 +459,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# shutil.move - Movimentando um arquivo"
+    "# <font color=#FF0000>**shutil.move()**</font> - Movimentando um arquivo"
    ],
    "metadata": {}
   },
@@ -516,7 +516,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.remove - Removendo arquivos\r\n",
+    "# <font color=#FF0000>**os.remove()**</font> - Removendo arquivos\r\n",
     "\r\n",
     "os.remove() método em Python é usado para remover ou excluir um caminho de arquivo. Este método não pode remover ou excluir um diretório. **Se o caminho especificado for um diretório, OSError será gerado pelo método**. os.rmdir() pode ser usado para remover o diretório."
    ],
@@ -600,7 +600,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.path.abspath - Verificando path completo de arquivo"
+    "# <font color=#FF0000>**os.path.abspath()**</font> - Verificando path completo de arquivo"
    ],
    "metadata": {}
   },
@@ -640,7 +640,42 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.walk - Cria um gerador que navega entre as pastas\r\n",
+    "# <font color=#FF0000>**os.sep**</font> - Verificando diretorio raiz linux ou windows\r\n",
+    "\r\n",
+    "* Linux retorna \"/\"\r\n",
+    "* Windows retorna \"C:\\\\\" (ou qualquer que seja o disco atual)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "import os\r\n",
+    "\r\n",
+    "# verificando qual separador o sistema usa.\r\n",
+    "print(f'{os.sep = }')\r\n",
+    "\r\n",
+    "# Agora vamos ver a unidade principal e com seu separador\r\n",
+    "print(f'\\n{os.path.abspath(os.sep) = }')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "os.sep = '\\\\'\n",
+      "\n",
+      "os.path.abspath(os.sep) = 'c:\\\\'\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# <font color=#FF0000>**os.walk**</font> - Cria um gerador que navega entre as pastas\r\n",
     "\r\n",
     "Como atravessar o sistema de arquivos em Python? Suponha que tenhamos dado abaixo a estrutura de arquivos em nosso sistema e queremos percorrer todos os seus ramos completamente de cima para baixo.\r\n",
     "\r\n",
@@ -728,7 +763,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# os.path.getctime() e os.stat() - Verificando data/hora de criação do arquivo no Windows"
+    "# <font color=#FF0000>**os.path.getctime()**</font> e <font color=#FF0000>**os.stat()**</font> - Verificando data/hora de criação do arquivo no Windows"
    ],
    "metadata": {}
   },
